WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220201
[LFC Display] Stacking item bounds were wrong in some cases
https://bugs.webkit.org/show_bug.cgi?id=220201
Summary
[LFC Display] Stacking item bounds were wrong in some cases
Simon Fraser (smfr)
Reported
2020-12-30 12:42:18 PST
[LFC Display] Stacking item bounds were wrong in some cases
Attachments
Patch
(13.74 KB, patch)
2020-12-30 12:47 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-12-30 12:47:12 PST
Created
attachment 416850
[details]
Patch
alan
Comment 2
2020-12-30 13:02:54 PST
Comment on
attachment 416850
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=416850&action=review
> Source/WebCore/display/DisplayTreeBuilder.cpp:226 > + auto currentStackingContextItem = [&]() -> StackingItem& {
is -> StackingItem& really required here?
EWS
Comment 3
2020-12-30 13:31:19 PST
Committed
r271109
: <
https://trac.webkit.org/changeset/271109
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416850
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-12-30 13:32:16 PST
<
rdar://problem/72743740
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug