[LFC Display] Stacking item bounds were wrong in some cases https://bugs.webkit.org/show_bug.cgi?id=220201

Reviewed by Zalan Bujtas.

Source/WebCore:

Display::StackingItem were computed incorrectly for some content configurations,
such as:
 - inline non-container box
 - inline container box with no children
 - positioned inline non-container box
 - positioned inline container box with no children
 - positioned block non-container box

Fix by ensuring that when we create a StackingItem for a box with no children
to descend into, we run the same geometry logic that happens for
pushStateForBoxDescendants()/popState(). Also ensure that we call
accountForBoxPaintingExtent() for leaf boxes without a stacking item.

Test: fast/layoutformattingcontext/display/stacking-item-bounds.html

* display/DisplayTreeBuilder.cpp:
(WebCore::Display::TreeBuilder::popState):
(WebCore::Display::TreeBuilder::didAppendNonContainerStackingItem):
(WebCore::Display::TreeBuilder::insertIntoTree):
(WebCore::Display::TreeBuilder::buildInlineDisplayTree):
(WebCore::Display::TreeBuilder::recursiveBuildDisplayTree):
* display/DisplayTreeBuilder.h:

LayoutTests:

* fast/layoutformattingcontext/display/stacking-item-bounds-expected.html: Added.
* fast/layoutformattingcontext/display/stacking-item-bounds.html: Added.


Canonical link: https://commits.webkit.org/232706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271109 268f45cc-cd09-0410-ab3c-d52691b4dbfc